@@ -45,7 +45,9 @@ on 'runtime' => sub {
 on 'test' => sub {
     requires "File::Spec::Functions" => "0";
     requires "File::Temp" => "0";
+    requires "Test::Fatal" => "0";
     requires "Test::More" => "0.96";
     requires "Test::Needs" => '0';
+    requires "Test::Warnings" => '0';
     requires "utf8" => "0";
 };
